@@ -840,7 +840,7 @@ int main(int argc, char **argv)
   /* parse the geometry string */
   if (geom_option_argc != 0)
   {
-    parse_window_geometry(argv[geom_option_argc]);
+    parse_window_geometry(argv[geom_option_argc], 0);
     has_button_geometry = 0;
   }
 
