@@ -1,3 +1,10 @@
+2003-04-25  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmButtons/FvwmButtons.c (main):
+	* FvwmButtons/parse.c (parse_window_geometry):
+	(ParseConfigLine):
+	fixed Xinerama handling of ButtonGeometry option in FvwmButtons
+
 2003-04-19  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmPager/x_pager.c (AddNewWindow):
