@@ -34,6 +34,9 @@ Changes in stable release 2.4.16 (not released yet)
 * Fixed a bug in FvwmPager that displayed iconified windows without
   icon title or picture as not iconified.
 
+* Fixed parsing of '@<screen>' Xinerama specification in the
+  ButtonGeometry option of FvwmButtons.
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.15 (24-Jan-2003)
